<resources>
    <string name="app_name">allttaemerona</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="signup">회원가입</string>
    <string name="login">로그인</string>
    <string name="id">ID</string>
    <string name="pw">PW</string>
    <string name="pw_check">PW 확인</string>
    <string name="cancel">취소</string>
    <string name="next">다음</string>
    <string name="back">뒤로가기</string>
    <string name="nickname">닉네임</string>
    <string name="select">선택해주세요</string>
    <string name="purchaser">구매자</string>
    <string name="messenger">전달자</string>
    <string name="id_hint">이메일을 입력해주세요</string>
    <string name="pw_create_hint">영문, 숫자를 포함한 8~15자의 비밀번호</string>
    <string name="pw_hint">비밀번호를 입력해주세요</string>
</resources>