<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="130dp"
    tools:context=".src.main.SelectActivity">

    <TextView
        android:id="@+id/tv_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_purchaser"
        app:layout_constraintStart_toStartOf="@+id/btn_purchaser" />

    <Button
        android:id="@+id/btn_purchaser"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/purchaser"
        android:textSize="32dp"
        android:background="@drawable/green_light_radius"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginTop="10dp"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintHeight_percent="0.17"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_select"/>

    <Button
        android:id="@+id/btn_messenger"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/messenger"
        android:textSize="32dp"
        android:background="@drawable/green_light_radius"
        style="?android:attr/borderlessButtonStyle"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_purchaser"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintHeight_percent="0.17"/>

</androidx.constraintlayout.widget.ConstraintLayout>