<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".src.login.LoginActivity">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="130dp"
        app:layout_constraintStart_toStartOf="@id/layout_id"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login">

        <TextView
            android:id="@+id/tv_id_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.958"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/id_hint"
            android:privateImeOptions="defaultInputmode=english"
            android:textSize="15dp"
            android:theme="@style/Theme.Allttaemerona.Underline"
            app:layout_constraintTop_toTopOf="@id/tv_id_signup"
            app:layout_constraintBottom_toBottomOf="@+id/tv_id_signup"
            app:layout_constraintStart_toEndOf="@+id/tv_id_signup" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.7"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_id">

        <TextView
            android:id="@+id/tv_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pw"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/et_pw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintWidth_percent="0.95"
            android:textSize="15dp"
            android:hint="@string/pw_hint"
            android:theme="@style/Theme.Allttaemerona.Underline"
            app:layout_constraintTop_toTopOf="@id/tv_pw"
            app:layout_constraintBottom_toBottomOf="@+id/tv_pw"
            app:layout_constraintStart_toEndOf="@+id/tv_pw" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/ib_kakao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:backgroundTint="@android:color/transparent"
        android:padding="0dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_pw"
        app:layout_constraintWidth_percent="0.7"
        app:srcCompat="@drawable/kakao_login_large_wide" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintWidth_percent="0.32"
        app:layout_constraintHeight_percent="0.05"
        android:text="@string/signup"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/purple_light_radius"
        app:layout_constraintStart_toStartOf="@+id/ib_kakao"
        app:layout_constraintTop_toBottomOf="@+id/ib_kakao" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/login"
        android:layout_marginTop="10dp"
        app:layout_constraintWidth_percent="0.32"
        app:layout_constraintHeight_percent="0.05"
        style="?android:attr/borderlessButtonStyle"
        android:background="@drawable/green_radius"
        app:layout_constraintEnd_toEndOf="@+id/ib_kakao"
        app:layout_constraintTop_toBottomOf="@+id/ib_kakao" />


</androidx.constraintlayout.widget.ConstraintLayout>