<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="130dp"
    tools:context=".src.signup.NicknameActivity">

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/et_nickname"
        app:layout_constraintStart_toStartOf="@+id/et_nickname" />

    <Button
        android:id="@+id/btn_nickname_check"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:background="@drawable/green_light_radius"
        app:layout_constraintStart_toEndOf="@id/tv_nickname"
        app:layout_constraintTop_toTopOf="@id/tv_nickname"
        app:layout_constraintBottom_toBottomOf="@id/tv_nickname"
        android:layout_marginStart="10dp"
        style="?android:attr/borderlessButtonStyle"
        android:text="중복확인"/>

    <EditText
        android:id="@+id/et_nickname"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:layout_constraintWidth_percent="0.7"
        android:ems="10"
        android:hint="2글자 이상의 닉네임을 입력해주세요"
        android:maxLength="20"
        android:textSize="16sp"
        android:inputType="textPersonName"
        android:theme="@style/Theme.Allttaemerona.Underline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_nickname"/>

    <TextView
        android:id="@+id/tv_nickname_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/red"
        app:layout_constraintStart_toStartOf="@+id/et_nickname"
        app:layout_constraintTop_toBottomOf="@+id/et_nickname" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintHeight_percent="0.05"
        android:layout_marginBottom="130dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.45"
            android:background="@drawable/gray_light_radius"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/back" />

        <Button
            android:id="@+id/btn_join"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_percent="0.45"
            android:background="@drawable/purple_light_radius"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/signup" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>